--- a/src/Resources/Locales/en_US.xaml
+++ b/src/Resources/Locales/en_US.xaml
@@ -115,6 +115,7 @@
     <sys:String x:Key="Text.CreateTag.Message.Placeholder">Optional.</sys:String>
 
     <sys:String x:Key="Text.Dashboard.Explore">Open In File Browser</sys:String>
+    <sys:String x:Key="Text.Dashboard.VSCode">Open In Visual Studio Code</sys:String>
     <sys:String x:Key="Text.Dashboard.Terminal">Open Git Bash</sys:String>
     <sys:String x:Key="Text.Dashboard.Search">Search Commit</sys:String>
     <sys:String x:Key="Text.Dashboard.Configure">Configure this repository</sys:String>
