--- a/src/Resources/Locales/zh_CN.xaml
+++ b/src/Resources/Locales/zh_CN.xaml
@@ -297,6 +297,7 @@
 
     <sys:String x:Key="Text.Welcome.Title">欢迎使用本软件</sys:String>
     <sys:String x:Key="Text.Welcome.OpenOrInit">打开本地仓库</sys:String>
+    <sys:String x:Key="Text.Welcome.OpenTerminal">打开GIT终端</sys:String>
     <sys:String x:Key="Text.Welcome.Clone">克隆远程仓库</sys:String>
     <sys:String x:Key="Text.Welcome.DragDrop">支持拖放操作</sys:String>
     <sys:String x:Key="Text.Welcome.Start">开始使用</sys:String>
