--- a/src/Resources/Locales/zh_CN.xaml
+++ b/src/Resources/Locales/zh_CN.xaml
@@ -295,7 +295,7 @@
     <sys:String x:Key="Text.Merge.Into">目标分支 ：</sys:String>
     <sys:String x:Key="Text.Merge.Mode">合并方式 ：</sys:String>
 
-    <sys:String x:Key="Text.Welcome.Title">欢迎使用本软件</sys:String>
+    <sys:String x:Key="Text.Welcome.Title">开源的轻量级Git图形客户端</sys:String>
     <sys:String x:Key="Text.Welcome.OpenOrInit">打开本地仓库</sys:String>
     <sys:String x:Key="Text.Welcome.OpenTerminal">打开GIT终端</sys:String>
     <sys:String x:Key="Text.Welcome.Clone">克隆远程仓库</sys:String>
