fix<PageTabBar>: missing translation for new tab control

--- a/src/Views/Widgets/PageTabBar.xaml
+++ b/src/Views/Widgets/PageTabBar.xaml
@@ -104,7 +104,7 @@
                     Margin="4,0" Padding="4"
                     Icon="{StaticResource Icon.NewTab}"
                     HoverBackground="{DynamicResource Brush.NewPageHover}"
-                    ToolTip="{DynamicResource Text.PageSwitcher.New}"
+                    ToolTip="{DynamicResource Text.PageTabBar.New}"
                     Click="NewTab"
                     WindowChrome.IsHitTestVisibleInChrome="True"/>
             </StackPanel>
