--- a/src/Resources/Styles/ToggleButton.xaml
+++ b/src/Resources/Styles/ToggleButton.xaml
@@ -82,17 +82,18 @@
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Opacity" Value=".8"/>
 
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ToggleButton}">
                     <Grid Background="Transparent">
                         <Path 
-                            x:Name="Icon" 
+                            x:Name="Icon"
                             Style="{DynamicResource Style.Icon}"
                             Width="{TemplateBinding Width}"
                             Height="{TemplateBinding Height}"
-                            Fill="{TemplateBinding Foreground}"
+                            Fill="{DynamicResource Brush.FG1}"
                             Data="{DynamicResource Icon.Orientation}"
                             RenderTransformOrigin=".5,.5">
                             <Path.RenderTransform>
@@ -109,33 +110,8 @@
                                 </Setter.Value>
                             </Setter>
                         </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <Style x:Key="Style.ToggleButton.CommitGraphMode" TargetType="{x:Type ToggleButton}">
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="BorderBrush" Value="Transparent"/>
-        <Setter Property="BorderThickness" Value="0"/>
-
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ToggleButton}">
-                    <Grid Background="Transparent">
-                        <Path 
-                            x:Name="Icon" 
-                            Style="{DynamicResource Style.Icon}"
-                            Width="{TemplateBinding Width}"
-                            Height="{TemplateBinding Height}"
-                            Fill="{TemplateBinding Foreground}"
-                            Data="{DynamicResource Icon.Curve}"/>
-                    </Grid>
-
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsChecked" Value="True">
-                            <Setter TargetName="Icon" Property="Data" Value="{DynamicResource Icon.Polyline}"/>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Opacity" Value="1"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
