style<Welcome>: small changes

--- a/src/Resources/Locales/en_US.xaml
+++ b/src/Resources/Locales/en_US.xaml
@@ -284,7 +284,7 @@
     <sys:String x:Key="Text.Launcher.Error">ERROR</sys:String>
 
     <sys:String x:Key="Text.PageTabBar.New">NEW PAGE</sys:String>
-    <sys:String x:Key="Text.PageTabBar.Welcome.Title">*Repositories</sys:String>
+    <sys:String x:Key="Text.PageTabBar.Welcome.Title">Repositories</sys:String>
     <sys:String x:Key="Text.PageTabBar.Welcome.Tip">WELCOME PAGE</sys:String>
     <sys:String x:Key="Text.PageTabBar.Tab.Close">Close Tab</sys:String>
     <sys:String x:Key="Text.PageTabBar.Tab.CloseOther">Close Other Tabs</sys:String>
