feature<SSH>: supports using ssh private key to access remote git repository

--- a/src/Resources/Locales/en_US.xaml
+++ b/src/Resources/Locales/en_US.xaml
@@ -22,6 +22,9 @@
     <sys:String x:Key="Text.ParentFolder">Parent Folder :</sys:String>
     <sys:String x:Key="Text.ParentFolder.Placeholder">Relative foler to store this module. Optional.</sys:String>
 
+    <sys:String x:Key="Text.SSHKey">SSH Private Key</sys:String>
+    <sys:String x:Key="Text.SSHKey.Placeholder">Private SSH key store path</sys:String>
+
     <sys:String x:Key="Text.About">ABOUT</sys:String>
     <sys:String x:Key="Text.About.Title">SourceGit - OPEN SOURCE GIT CLIENT</sys:String>
 
